Assignments/docker-app/abishek/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app

spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app

    spec:
      containers:
        - name: node-app
          image: icr.io/abishek/node-app
          imagePullPolicy: Always
          ports:
            - containerPort: 3030
              protocol: TCP
