Assignments/docker-app/abishek/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  type: ClusterIP
  ports:
    - port: 3030
  selector:
    app: node-app
